--- a/src/components/ViewListing/_ViewListing.scss
+++ b/src/components/ViewListing/_ViewListing.scss
@@ -3,7 +3,6 @@
   flex-direction: row;
   max-width: 1024px;
   margin: 0 auto;
-  margin-top: 5rem;
   border-top: 1px solid lightgray;
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -64,18 +63,19 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   @media (max-width: 900px) {
     width: 90%;
   }
   & > div {
-    width: 33%;
+    width: 30%;
     & h3 {
       font-weight: 700;
       font-size: 1.4rem;
     }
     & img {
-      padding: 1rem 1rem 1rem 0px;
+      width: 100%;
+      margin-bottom: 2rem;
     }
   }
 }
@@ -106,6 +106,9 @@
     position: relative;
     right: 6px;
     top: 40px;
+    @media (max-width: 900px) {
+      display: none;
+    }
   }
 }
 
@@ -113,23 +116,29 @@
   overflow-y: scroll;
   height: 100vh;
   -webkit-overflow-scrolling: touch;
-}
-.list1::-webkit-scrollbar-track {
-  border-radius: 10px;
-  width: 50px;
-}
-.list1::-webkit-scrollbar {
-  width: 10px;
-  border-radius: 10px;
-}
-.list1::-webkit-scrollbar-thumb {
-  //background-image: url("./Images/circle.svg");
-  background-position: center;
-  background-size: cover;
-  height: 50px;
-  background-color: #000;
-  border-top: 40px solid #fff;
-  border-bottom: 38px solid #fff;
+  @media (max-width: 900px) {
+    height: 100%;
+    overflow: hidden;
+  }
 }
 
+@media (min-width: 900px) {
+  .list1::-webkit-scrollbar-track {
+    border-radius: 10px;
+    width: 50px;
+  }
+  .list1::-webkit-scrollbar {
+    width: 10px;
+    border-radius: 10px;
+  }
+  .list1::-webkit-scrollbar-thumb {
+    //background-image: url("./Images/circle.svg");
+    background-position: center;
+    background-size: cover;
+    height: 50px;
+    background-color: #000;
+    border-top: 40px solid #fff;
+    border-bottom: 38px solid #fff;
+  }
+}
 //end scrollbar styings
